adding socket io and hooking up a listener

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -21,3 +21,7 @@ block content
 		hr
 		p Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
 			| <a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
+
+block js
+	script.
+		var socket = io();
