--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -88,7 +88,9 @@ html
 
 
 		//- JAVASCRIPT
-
+		
+		script(src='/socket.io/socket.io.js')
+		
 		//- jQuery 1.11.3 is included by default, and required by both Bootstrap
 		//- and the KeystoneJS Content Editor. If you are not targeting IE8,
 		//- you can upgrade to 2.1.4 (also bundled) for better performance.
