--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -24,4 +24,8 @@ block content
 
 block js
 	script.
-		var socket = io();
+		var socket = io()
+		socket.on('botMessage', function(message) {
+			console.log('bot message!');
+			console.log(message)
+		})
