--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -4,6 +4,7 @@ block content
 	.container: .jumbotron
 		img(src='/images/logo.svg', width='160')
 		h1 Welcome
+		h1= user._id
 		p This is your new <a href='http://keystonejs.com' target='_blank'>KeystoneJS</a> website.
 		p It includes the latest versions of
 			| <a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
